--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="%PUBLIC_URL%/index.webp" rel="icon">
+  	<link href="%PUBLIC_URL%/index.webp" rel="apple-touch-icon">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/index.webp" />
+
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#00000A" />
     <!--
